# axum-surreal-restful-template

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.development.alpine  README.md  compose.yaml
.cargo/: config.toml
.devcontainer/: Dockerfile  Dockerfile.fedora  devcontainer.json
.helix/: languages.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs  lib.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  jwt.rs  mod.rs
crates/libs/lib-surrealdb/: Cargo.toml
crates/libs/lib-surrealdb/src/ctx/: error.rs  mod.rs
crates/libs/lib-surrealdb/src/model/: error.rs  mod.rs
crates/libs/lib-surrealdb/src/model/store/: error.rs
crates/libs/lib-surrealdb/src/model/tasks/: bmc.rs  mod.rs
crates/libs/lib-surrealdb/src/model/users/: bmc.rs  mod.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  envs.rs  time.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: jwt.rs  playground.rs
crates/services/web-server/src/: config.rs  main.rs  params.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/middlewares/: auth.rs  error.rs  mod.rs  req_stamp.rs  res_map.rs
crates/services/web-server/src/routes/: error.rs  health.rs  mod.rs
crates/services/web-server/src/routes/api/: mod.rs
crates/services/web-server/src/routes/api/v1/: login.rs  logout.rs  mod.rs  register.rs
crates/services/web-server/src/routes/api/v1/_protected/: mod.rs  register.rs  tasks.rs  users.rs
requests/: health.http
requests/api/v1/: login.http  logout.http  register.http  users.http
requests/api/v1/_protected/: register.http  users.http
requests/api/v1/_protected/users/: delete_users.http  get_users.http  post_users.http  put_users.http
sql/: 00-define_db.surql  101-define_table_users.surql  201-create_user.surql
