[package]
name = "lib-surrealdb"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.18"
lib-utils = { version = "0.1.0", path = "../lib-utils" }
lib-auth = { version = "0.1.0", path = "../lib-auth" }
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"
surrealdb = "1.5.4"
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4"] }

[lints]
workspace = true

[lib]
doctest = false

[dev-dependencies]
serial_test = "3.1.1"
tokio = { version = "1.38.1", features = ["full"] }
