[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
base64 = "0.22.1"
derive_more = "0.99.18"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.8.3"
time = { version = "0.3.36", features = ["formatting", "parsing", "macros"] }

[lints]
workspace = true
