[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
axum = "0.7.5"
derive_more = "0.99.18"
lib-surrealdb = { version = "0.1.0", path = "../../libs/lib-surrealdb" }
lib-auth = { version = "0.1.0", path = "../../libs/lib-auth" }
lib-utils = { version = "0.1.0", path = "../../libs/lib-utils" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.9.0"
strum_macros = "0.26.4"
time = "0.3.36"
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.10.0"

[lints]
workspace = true
